--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.41"
 serde = { version = "1.0.41", features = ["derive"] }
 regex = "1.3.1"
 percent-encoding = "2.1.0"
+dirs = "3.0.1"
